infrastructure/cilium-policies/base/allow-gateway-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-from-gateway
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - ingress
