infrastructure/cilium-policies/base/allow-kube-system.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-kube-system
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: kube-system
  ingress:
    - fromEntities:
        - cluster
    - fromCIDR:
        - 10.0.5.0/24
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
  egress:
    - toEntities:
        - cluster
        - world
