infrastructure/cilium-policies/base/longhorn.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - cluster
  egress:
    - toEntities:
        - cluster
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
