infrastructure/cilium-policies/base/trivy-converter.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-to-kube-api-server
  namespace: trivy-converter
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: trivy-operator-polr-adapter
  egress:
    - toEntities:
        - kube-apiserver
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
